使用echarts绘制gauge仪表盘，实时预览cpu使用率

--- a/frontend/src/app/pages/welcome/welcome.component.html
+++ b/frontend/src/app/pages/welcome/welcome.component.html
@@ -1,2 +1,3 @@
 <p>CPU 使用率(10s)</p>
 <nz-progress [nzPercent]="cpu_usage" nzType="circle" [nzWidth]="80"></nz-progress>
+<div echarts [options]="chartOptions" class="demo-chart"></div>
